# rust_fortuna

./: Cargo.toml
src/: main.rs
